Change Log
----------

  V1.1
  
  - Fixes:
    - Slider arrow buttons work correctly.

  V1.0 (20110201)
  
  - Fixes:
    - Rect::getAddition() returns the correct rectangle.
    - All .NET tools work correctly.

  V0.99.6 (20101101)
  
  - Fixes:
    - Fixed scrolling problem in top screen.
    - Gadget::changeDimensions() no longer leaves gadgets accidentally hidden.
    - Division by 0 fixed in Range class when max value == min value.
    - Document::stripTopLines() no longer wraps text twice.
    - WoopsiString::getCharAt() returns NULL if index is out of valid range.
    - Removed "Loading" message from FileListBox.
    - Fix to ScrollingListBox scrollbar grip size.
    - Support for 1 or 2 of physical displays (helps with SDL ports to other
      platforms).
    - Compiler warning fixes.
    - MultiLineTextBox scrolls to follow cursor when text is inserted.
    - WoopsiString::encodeCodePoint() numBytes parameter is optional.
    - WoopsiString::getCodePoint() numChars parameter is optional.
    - WoopsiString::getCodePoint() returns the correct number of chars if the
      codepoint is invalid.
    - Fixed clipping bug in PackedFont1::renderChar() (Lakedaemon).
    - Fixed clipping bug in PackedFont16::renderChar() (Lakedaemon).
    - TextBox::getPreferredDimensions() allows space for the cursor if visible.
    - Fixed null pointer dereference in WoopsiString::getCodePoint.
  
  - New Features:
    - Added Debug::flipToTopScreen().
    - Added Debug::flipToBottomScreen().
    - Added Debug::flipScreens().
    - Added Debug::raiseToTop().
    - Added Debug::lowerToBottom().
    - Added Debug::wvsnprintf().
    - Built with devKitARM r32/libnds 1.4.8 (manually patched line 661 of
      nds/arm9/videoGL.h to fix warnings;
      see http://devkitpro.org/viewtopic.php?f=13&t=2277).

  V0.99.5 (20100916)
  
  - Fixes:
    - Removed freetype classes, library and example (Lakedaemon's distro will
      provide this functionality).